<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="intro_text">Droid Dessert</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="cart_text">Shopping Cart</string>
    <string name="cartText_text">Welcome to cart!</string>
    <string name="cartButton_text">Go back!</string>
</resources>